--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "![](https://img.shields.io/badge/Microverse-blueviolet)",
   "main": "main.js",
   "scripts": {
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -16,5 +17,9 @@
   "bugs": {
     "url": "https://github.com/Shaher-11/task-manager/issues"
   },
-  "homepage": "https://github.com/Shaher-11/task-manager#readme"
+  "homepage": "https://github.com/Shaher-11/task-manager#readme",
+  "devDependencies": {
+    "webpack": "^5.39.1",
+    "webpack-cli": "^4.7.2"
+  }
 }
