--- a/package.json
+++ b/package.json
@@ -5,11 +5,9 @@
   "main": "main.js",
   "private": true,
   "scripts": {
-    "dev": "webpack --mode development",
+    "dev": "npx webpack --config webpack.config.js --mode development",
     "build": "webpack",
-    "watch": "webpack --watch",
-    "start": "webpack serve --open",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack serve --mode=development --config webpack.config.js"
   },
   "repository": {
     "type": "git",
