--- a/package.json
+++ b/package.json
@@ -1,39 +1,43 @@
 {
-  "name": "task-manager",
+  "name": "taskmanager",
   "version": "1.0.0",
-  "description": "![](https://img.shields.io/badge/Microverse-blueviolet)",
-  "main": "main.js",
-  "private": true,
+  "description": "## About",
+  "main": "webpack.config.js",
+  "dependencies": {
+    "babel-eslint": "^10.1.0",
+    "date-fns": "^2.16.1",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2",
+    "stylelint": "^13.3.3",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-csstree-validator": "^1.9.0",
+    "stylelint-scss": "^3.17.2",
+    "webpack": "^5.11.0"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.12.11",
+    "css-loader": "^5.0.1",
+    "jest": "^26.6.3",
+    "style-loader": "^2.0.0",
+    "webpack-cli": "^4.7.2"
+  },
   "scripts": {
-    "dev": "npx webpack --config webpack.config.js --mode development",
-    "build": "webpack",
-    "start": "webpack serve --mode=development --config webpack.config.js"
+    "test": "jest",
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production",
+    "start": "webpack-dev-server --mode development --open",
+    "watch": "webpack --watch"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Shaher-11/task-manager.git"
+    "url": "git+https://github.com/Shaher-11/task-manager/issues.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Shaher Shamroukh",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Shaher-11/task-manager/issues"
   },
-  "homepage": "https://github.com/Shaher-11/task-manager#readme",
-  "devDependencies": {
-    "babel-eslint": "^10.1.0",
-    "css-loader": "^5.2.6",
-    "eslint": "^7.29.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.23.4",
-    "style-loader": "^2.0.0",
-    "stylelint": "^13.13.1",
-    "stylelint-config-standard": "^21.0.0",
-    "stylelint-csstree-validator": "^1.9.0",
-    "stylelint-scss": "^3.19.0",
-    "webpack": "^5.40.0",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2"
-  }
+  "homepage": "https://github.com/Shaher-11/task-manager/issues#readme"
 }
-  
